--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.194",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "jest": "^27.5.1",
     "typescript": "4.4.2"
   },
   "scripts": {
