--- a/.github/workflows/runTesting.yml
+++ b/.github/workflows/runTesting.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
 jobs:
-  deploy:
+  testing:
     concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
